--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,7 @@
 @(projects: List[Project], todoTasks: List[Task])
 
-@main("Welcome to Play 2.0") {
+@main(projects) {
+
 
     <header>
         <hgroup>
@@ -16,21 +17,14 @@
                     <header>
                         <h3>@project.name</h3>
                     </header>
+                    
                     <ul class="list">
                         @tasks.map { task =>
-                            <li data-task-id="@task.id">
-                                <h4>@task.title</h4>
-                                @if(task.dueDate != null) {
-                                    <time datetime="@task.dueDate">
-                                        @task.dueDate.format("MMM dd yyyy")</time>
-                                }
-
-                                @if(task.assignedTo != null && task.assignedTo.email != null) {
-                                    <span class="assignedTo">@task.assignedTo.email</span>
-                                }
-                            </li>
+                            @views.html.tasks.item(task)
                         }
                     </ul>
+                     
+                    
                 </div>
             }
         }
